// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateItem Test Case {   Snap 1 } 1`] = `
<header>
  <span
    className="count"
  >
    3
  </span>
  <span
    className="icon"
  >
    Snap
  </span>
</header>
`;

exports[`StateItem Test Case {   Snap 2 } 1`] = `
<header>
  <span
    className="count"
  />
  <span
    className="icon"
  />
</header>
`;

exports[`StateItem Test Case {   Snap 3 } 1`] = `
<header>
  <span
    className="count"
  >
    0
  </span>
  <span
    className="icon"
  >
    Snap
  </span>
</header>
`;
